new result tables with new information

--- a/resources/configuration/cpp.cfg
+++ b/resources/configuration/cpp.cfg
@@ -25,8 +25,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -40,8 +39,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -55,8 +53,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -70,8 +67,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -92,7 +88,8 @@
 			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
-		"NEWLINE": 					"\n"
+		"NEWLINE": 					"\n",
+		"TABSPACE":					"    "
 	},
 	
 	"DBTokenHandler": {
@@ -117,7 +114,9 @@
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages", 
 		"RESULTTABLE":	"resulttable",
-		"SUMMARY":		"summary"
+		"RANK":		"rank_",
+		"PREFIXSTAT":	"LStat_",
+		"PRECISION":	"precision_"
 	},
 	
 	"ScanMode": {
