--- a/resources/configuration/default.cfg
+++ b/resources/configuration/default.cfg
@@ -25,9 +25,9 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
+				"minOccInProject": "2"},	
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -40,8 +40,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "GlobalFilter"}
 			]
 		},		
@@ -51,9 +50,9 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
+				"minOccInProject": "2"},	
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -66,8 +65,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "CoverageFilter"}
 			]
 		},		
@@ -77,9 +75,9 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
+				"minOccInProject": "2"},	
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -92,8 +90,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "NewlineFilter"}
 			]
 		},		
@@ -103,9 +100,9 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
+				"minOccInProject": "2"},	
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -118,8 +115,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IndentFilter"}
 			]
 		},		
@@ -129,9 +125,9 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
+				"minOccInProject": "2"},	
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -144,8 +140,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "RealIndentFilter"}
 			]
 		}			
@@ -162,7 +157,8 @@
 			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
-		"NEWLINE": 					"\n"
+		"NEWLINE": 					"\n",
+		"TABSPACE":					"    "
 	},
 	
 	"DBTokenHandler": {
@@ -187,7 +183,9 @@
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages", 
 		"RESULTTABLE":	"resulttable",
-		"SUMMARY":		"summary"
+		"RANK":			"rank_",
+		"PREFIXSTAT":	"LStat_",
+		"PRECISION":	"precision_"
 	},
 	
 	"ScanMode": {
