--- a/resources/configuration/java.cfg
+++ b/resources/configuration/java.cfg
@@ -25,8 +25,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -40,8 +39,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "GlobalFilter"}
 			]
 		},		
@@ -51,8 +49,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -66,7 +63,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
+				 "langPreFix": "LStat_",
 				 "projPreFix": "Null"},
 				{"name": "CoverageFilter"}
 			]
@@ -77,8 +74,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -92,8 +88,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "NewlineFilter"}
 			]
 		},		
@@ -103,8 +98,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -118,8 +112,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IndentFilter"}
 			]
 		},		
@@ -129,8 +122,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -144,8 +136,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "RealIndentFilter"}
 			]
 		}			
@@ -162,7 +153,8 @@
 			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
-		"NEWLINE": 					"\n"
+		"NEWLINE": 					"\n",
+		"TABSPACE":					"    "
 	},
 	
 	"DBTokenHandler": {
@@ -187,7 +179,9 @@
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages", 
 		"RESULTTABLE":	"resulttable",
-		"SUMMARY":		"summary"
+		"RANK":		"rank_",
+		"PREFIXSTAT":	"LStat_",
+		"PRECISION":	"precision_"
 	},
 		
 	"ScanMode": {
