--- a/resources/testing/configuration/test1.cfg
+++ b/resources/testing/configuration/test1.cfg
@@ -32,7 +32,8 @@
 			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
-		"NEWLINE": 					"\n"
+		"NEWLINE": 					"\n",
+		"TABSPACE":					"    "
 	},
 	
 	"DBTokenHandler": {
@@ -57,7 +58,9 @@
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages", 
 		"RESULTTABLE":	"resulttable",
-		"SUMMARY":		"summary"
+		"RANK":		"rank_",
+		"PREFIXSTAT":	"LStat_",
+		"PRECISION":	"precision_"
 	},
 	
 	"ScanMode": {
