--- a/resources/testing/configuration/test2.cfg
+++ b/resources/testing/configuration/test2.cfg
@@ -26,8 +26,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "GlobalFilter"}
 			]
 		},		
@@ -38,8 +37,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "CoverageFilter"}
 			]
 		},		
@@ -50,8 +48,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "NewlineFilter"}
 			]
 		},				
@@ -62,8 +59,7 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "RealIndentFilter"}
 			]
 		}	
@@ -80,7 +76,8 @@
 			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
-		"NEWLINE": 					"\n"
+		"NEWLINE": 					"\n",
+		"TABSPACE":					"    "
 	},
 	
 	"DBTokenHandler": {
@@ -105,7 +102,9 @@
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages", 
 		"RESULTTABLE":	"resulttable",
-		"SUMMARY":		"summary"
+		"RANK":		"rank_",
+		"PREFIXSTAT":	"LStat_",
+		"PRECISION":	"precision_"
 	},
 	
 	"ScanMode": {
