--- a/resources/configuration/c.cfg
+++ b/resources/configuration/c.cfg
@@ -25,9 +25,9 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
+				 "minOccInProject": "2"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -40,9 +40,9 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
+				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -55,9 +55,9 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
-				{"name": "IntersectFilter",				 
+				 "save": "true"},
+				{"name": "IntersectFilter",
+				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -70,9 +70,9 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
+				"minOccInProject": "2"},			 	
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -85,9 +85,9 @@
 			],
 			"filters": [
 				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
+				 "save": "true"},
 				{"name": "IntersectFilter",
+				"minOccInProject": "2"},	
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -107,7 +107,8 @@
 			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
-		"NEWLINE": 					"\n"
+		"NEWLINE": 					"\n",
+		"TABSPACE":					"    "
 	},
 	
 	"DBTokenHandler": {
@@ -132,7 +133,9 @@
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages", 
 		"RESULTTABLE":	"resulttable",
-		"SUMMARY":		"summary"
+		"RANK":		"rank_",
+		"PREFIXSTAT":	"LStat_",
+		"PRECISION":	"precision_"
 	},
 	
 	"ScanMode": {
