--- a/resources/configuration/cpp.cfg
+++ b/resources/configuration/cpp.cfg
@@ -27,6 +27,7 @@
 				{"name": "Output", 
 				 "save": "true"},
 				{"name": "IntersectFilter",
+				 "minOccInProject": "2"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -41,6 +42,7 @@
 				{"name": "Output", 
 				 "save": "true"},
 				{"name": "IntersectFilter",
+				 "minOccInProject": "2"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -55,6 +57,7 @@
 				{"name": "Output", 
 				 "save": "true"},
 				{"name": "IntersectFilter",
+				 "minOccInProject": "2"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -69,6 +72,7 @@
 				{"name": "Output", 
 				 "save": "true"},
 				{"name": "IntersectFilter",
+				 "minOccInProject": "2"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
