--- a/resources/configuration/python.cfg
+++ b/resources/configuration/python.cfg
@@ -26,7 +26,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter",
+				{"name": "IntersectFilter"},
 				 "minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -41,7 +41,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter",
+				{"name": "IntersectFilter"},
 				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -56,7 +56,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter", 
+				{"name": "IntersectFilter"}, 
 				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -71,7 +71,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter", 
+				{"name": "IntersectFilter"}, 
 				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -86,7 +86,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter", 
+				{"name": "IntersectFilter"}, 
 				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
