--- a/resources/configuration/java.cfg
+++ b/resources/configuration/java.cfg
@@ -18,104 +18,7 @@
 		"outputLocation":			"resources/databases/"
 	},
 	
-	"FilterChains": [
-		{	"resultName": "_Global_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IntersectFilter",
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "GlobalFilter"}
-			]
-		},	
-		{	"resultName": "_Global",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "GlobalFilter"}
-			]
-		},		
-		{	"resultName": "_Coverage_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IntersectFilter",
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "CoverageFilter"}
-			]
-		},	
-		{	"resultName": "_Coverage",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "langPreFix": "LStat_",
-				 "projPreFix": "Null"},
-				{"name": "CoverageFilter"}
-			]
-		},		
-		{	"resultName": "_Newline_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IntersectFilter",
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "NewlineFilter"}
-			]
-		},	
-		{	"resultName": "_Newline",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "NewlineFilter"}
-			]
-		},		
-		{	"resultName": "_Indent_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IntersectFilter",
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "IndentFilter"}
-			]
-		},	
-		{	"resultName": "_Indent",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IndentFilter"}
-			]
-		},		
+	"FilterChains": [		
 		{	"resultName": "_RealIndent_Int_Up_Sub",
 			"languages": [
 				{"name": 	"Java"}
@@ -124,6 +27,7 @@
 				{"name": "Output", 
 				 "save": "true"},
 				{"name": "IntersectFilter",
+				 "minOccInProject": "2"},
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -166,7 +70,7 @@
 		"INDENT":	"#indent",
 		"STRING":	"#string",
 		"COMMENT":	"#comment",
-		"DELIMITER":	"#delimiter",
+		"DELIMITER":"#delimiter",
 		"LONGWORD":	"#longword"
 	},
 		
@@ -179,7 +83,7 @@
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages", 
 		"RESULTTABLE":	"resulttable",
-		"RANK":		"rank_",
+		"RANK":			"rank_",
 		"PREFIXSTAT":	"LStat_",
 		"PRECISION":	"precision_"
 	},
