--- a/resources/configuration/extract_python.cfg
+++ b/resources/configuration/extract_python.cfg
@@ -10,7 +10,7 @@
 	"DefaultLanguages": [
 		{	"name": 			"Python",
 			"filePattern":		"*.py",
-			"projectsPath": 	"./AuToCa/resources/testprojects/Python/",
-			"tokenPath":		"../AuToCa/resources/haskell_keywords.txt"}
+			"projectsPath": 	"../AuToCa/resources/testprojects/Python/",
+			"tokenPath":		"../AuToCa/resources/python_keywords.txt"}
 	]
 }
