--- a/resources/configuration/extract_scheme.cfg
+++ b/resources/configuration/extract_scheme.cfg
@@ -9,8 +9,8 @@
 	
 	"DefaultLanguages": [
 		{	"name": 			"Scheme",
-			"filePattern":		"*.ss",
-			"projectsPath": 	"I:/Haskell/cloned-projects",
+			"filePattern":		"*.scm",
+			"projectsPath": 	"../AuToCa/resources/testprojects/Scheme/",
 			"tokenPath":		"../AuToCa/resources/scheme_keywords.txt"}
 	]
 }
