--- a/resources/configuration/python.cfg
+++ b/resources/configuration/python.cfg
@@ -7,7 +7,7 @@
 	],
 
 	"DB": {
-		"FILENAME":		".autoca",
+		"FILENAME":		".python_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
@@ -26,7 +26,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				 "minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -41,7 +41,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -56,7 +56,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter"}, 
+				{"name": "IntersectFilter", 
 				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -71,7 +71,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter"}, 
+				{"name": "IntersectFilter", 
 				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -86,7 +86,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter"}, 
+				{"name": "IntersectFilter", 
 				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -100,7 +100,7 @@
 		"DEFAULT_LS": 				"\n",
 		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
-		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
+		"DEFAULT_MULTI_COMMENT":	"(?s)\"\"\".*?\"\"\"",
 		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",
 			
 		"PYTHON_LIKE_COMMENT": 		"(?s)#.*?\n",
