--- a/resources/testing/configuration/testCpp.cfg
+++ b/resources/testing/configuration/testCpp.cfg
@@ -1,13 +1,13 @@
 {
 	"DefaultLanguages": [
-		{	"name": 			"Java",
-			"filePattern":		"*.java",
-			"projectsPath": 	"../AuToCa/resources/testing/testprojects/test2/",
-			"tokenPath":		"../AuToCa/resources/java_keywords.txt"}
+		{	"name": 			"Cpp",
+			"filePattern":		"*.cpp",
+			"projectsPath": 	"../AuToCa/resources/testing/testprojects/test2/",			
+			"tokenPath":		"../AuToCa/resources/cpp_keywords.txt"}
 	],
-
+	
 	"DB": {
-		"FILENAME":		".test2_autoca",
+		"FILENAME":		".cpp_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
@@ -15,14 +15,13 @@
 	},
 	
 	"DataSet": {
-		"outputLocation":			"../AuToCa/resources/testing/databases/"
+			"outputLocation":			"../AuToCa/resources/testing/databases/"
 	},
 	
-	"FilterChains": [	
-		{	
-			"resultName": "_Global",
+	"FilterChains": [
+	{	"resultName": "_Global",
 			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output", 
@@ -30,10 +29,9 @@
 				{"name": "GlobalFilter"}
 			]
 		},		
-		{	
-			"resultName": "_Coverage",
+		{	"resultName": "_Coverage",
 			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output", 
@@ -41,10 +39,9 @@
 				{"name": "CoverageFilter"}
 			]
 		},		
-		{	
-			"resultName": "_Newline",
+		{	"resultName": "_Newline",
 			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output", 
@@ -52,17 +49,16 @@
 				{"name": "NewlineFilter"}
 			]
 		},				
-		{	
-			"resultName": "_RealIndent",
+		{	"resultName": "_RealIndent",
 			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"Cpp"}
 			],
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
 				{"name": "RealIndentFilter"}
 			]
-		}	
+		}			
 	],
 	
 	"Tokenizer": {
@@ -82,7 +78,7 @@
 	
 	"DBTokenHandler": {
 		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
-		"DEFAULT_MIN_TOKEN_LENGTH":	"0",
+		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
 		
 		"DBNEWLINE":"#newline",
 		"DEDENT":	"#dedent",
@@ -92,7 +88,7 @@
 		"DELIMITER":	"#delimiter",
 		"LONGWORD":	"#longword"
 	},
-	
+		
 	"Tables": {
 		"TEMPORARY": 	"temporary",
 		"TEMPFILTER":	"temporary_filter",
