scan size limit

--- a/resources/configuration/default.cfg
+++ b/resources/configuration/default.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Java",
 			"filePattern":		"*.java",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Test/",
-			"tokenPath":		"../AuToCa/resources/java_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/java_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	],
 
 	"DB": {
