--- a/resources/configuration/extract_cpp.cfg
+++ b/resources/configuration/extract_cpp.cfg
@@ -11,6 +11,8 @@
 		{	"name": 			"Cpp",
 			"filePattern":		"*.cpp",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Cpp/",
-			"tokenPath":		"../AuToCa/resources/cpp_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/cpp_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	]
 }
