--- a/resources/configuration/extract_default.cfg
+++ b/resources/configuration/extract_default.cfg
@@ -11,6 +11,8 @@
 		{	"name": 			"Java",
 			"filePattern":		"*.java",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Java/",
-			"tokenPath":		"../AuToCa/resources/java_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/java_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	]
 }
