--- a/resources/configuration/extract_haskell.cfg
+++ b/resources/configuration/extract_haskell.cfg
@@ -11,6 +11,8 @@
 		{	"name": 			"Haskell",
 			"filePattern":		"*.hs",
 			"projectsPath": 	"I:/Haskell/cloned-projects",
-			"tokenPath":		"../AuToCa/resources/haskell_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/haskell_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	]
 }
