--- a/resources/configuration/java.cfg
+++ b/resources/configuration/java.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Java",
 			"filePattern":		"*.java",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Java/",
-			"tokenPath":		"../AuToCa/resources/java_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/java_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "4"}
 	],
 
 	"DB": {
@@ -19,29 +21,79 @@
 	},
 	
 	"FilterChains": [		
-		{	"resultName": "_RealIndent_Int_Up_Sub",
+		{	"resultName": "_Newl_Int_Up_Sub",
 			"languages": [
 				{"name": 	"Java"}
 			],
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter",
-				 "minOccInProject": "2"},
+				{"name": "IntersectFilter"},
+				 "minOccInProject": "2"},			 
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "NewlineFilter"}
+			]
+		},			
+		{	"resultName": "_Glo_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "IntersectFilter"},
+				"minOccInProject": "2"},			 
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "GlobalFilter"}
+			]
+		},			
+		{	"resultName": "_Cov_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "IntersectFilter"}, 
+				"minOccInProject": "2"},			 
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "CoverageFilter"}
+			]
+		},		
+		{	"resultName": "_RealInd_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "IntersectFilter"}, 
+				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
 				{"name": "RealIndentFilter"}
 			]
-		},	
-		{	"resultName": "_RealIndent",
+		},			
+		{	"resultName": "_Ind_Int_Up_Sub",
 			"languages": [
 				{"name": 	"Java"}
 			],
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "RealIndentFilter"}
+				{"name": "IntersectFilter"}, 
+				"minOccInProject": "2"},			 
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "IndentFilter"}
 			]
 		}			
 	],
