--- a/resources/testing/configuration/test1.cfg
+++ b/resources/testing/configuration/test1.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Java",
 			"filePattern":		"*.java",
 			"projectsPath": 	"../AuToCa/resources/testing/testprojects/empty/",
-			"tokenPath":		"../AuToCa/resources/java_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/java_keywords.txt",
+			"projectSizeLimit":	"10000000",
+			"minAmountOfProjects": "1"}
 	],
 
 	"DB": {
