--- a/resources/testing/configuration/testC.cfg
+++ b/resources/testing/configuration/testC.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"C",
 			"filePattern":		"*.c",
 			"projectsPath": 	"../AuToCa/resources/testing/testprojects/test2/",
-			"tokenPath":		"../AuToCa/resources/c_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/c_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "1"}
 	],
 	
 	"DB": {
