--- a/resources/testing/configuration/testClojure.cfg
+++ b/resources/testing/configuration/testClojure.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Clojure",
 			"filePattern":		"*.clj",
 			"projectsPath": 	"../AuToCa/resources/testing/testprojects/test2/",
-			"tokenPath":		"../AuToCa/resources/clojure_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/clojure_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "1"}
 	],
 
 	"DB": {
