--- a/resources/testing/configuration/testPython.cfg
+++ b/resources/testing/configuration/testPython.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Python",
 			"filePattern":		"*.py",
 			"projectsPath": 	"../AuToCa/resources/testing/testprojects/test2/",			
-			"tokenPath":		"../AuToCa/resources/python_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/python_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "1"}
 	],
 
 	"DB": {
