--- a/resources/testing/configuration/testShell.cfg
+++ b/resources/testing/configuration/testShell.cfg
@@ -2,8 +2,10 @@
 	"DefaultLanguages": [
 		{	"name": 			"Shell",
 			"filePattern":		"*.sh",
-				"projectsPath": 	"../AuToCa/resources/testing/testprojects/test2/",
-		"tokenPath":		"../AuToCa/resources/shell_keywords.txt"}
+			"projectsPath": 	"../AuToCa/resources/testing/testprojects/test2/",
+			"tokenPath":		"../AuToCa/resources/shell_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "1"}
 	],
 
 	"DB": {
