--- a/resources/configuration/c.cfg
+++ b/resources/configuration/c.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"C",
 			"filePattern":		"*.c",
 			"projectsPath": 	"../AuToCa/resources/testprojects/C/",
-			"tokenPath":		"../AuToCa/resources/c_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/c_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	],
 	
 	"DB": {
