--- a/resources/configuration/clojure.cfg
+++ b/resources/configuration/clojure.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Clojure",
 			"filePattern":		"*.clj",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Clojure/",
-			"tokenPath":		"../AuToCa/resources/clojure_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/clojure_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	],
 
 	"DB": {
