--- a/resources/configuration/cpp.cfg
+++ b/resources/configuration/cpp.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Cpp",
 			"filePattern":		"*.cpp",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Cpp/",
-			"tokenPath":		"../AuToCa/resources/cpp_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/cpp_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	],
 	
 	"DB": {
