--- a/resources/configuration/extract_c.cfg
+++ b/resources/configuration/extract_c.cfg
@@ -11,6 +11,8 @@
 		{	"name": 			"C",
 			"filePattern":		"*.c",
 			"projectsPath": 	"../AuToCa/resources/testprojects/C/",
-			"tokenPath":		"../AuToCa/resources/c_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/c_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	]
 }
