--- a/resources/configuration/extract_clojure.cfg
+++ b/resources/configuration/extract_clojure.cfg
@@ -11,6 +11,8 @@
 		{	"name": 			"Clojure",
 			"filePattern":		"*.clj",
 			"projectsPath": 	"I:/Clojure/cloned-projects",
-			"tokenPath":		"../AuToCa/resources/clojure_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/clojure_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	]
 }
