--- a/resources/configuration/extract_scheme.cfg
+++ b/resources/configuration/extract_scheme.cfg
@@ -11,6 +11,8 @@
 		{	"name": 			"Scheme",
 			"filePattern":		"*.scm",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Scheme/",
-			"tokenPath":		"../AuToCa/resources/scheme_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/scheme_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	]
 }
