--- a/resources/configuration/extract_shell.cfg
+++ b/resources/configuration/extract_shell.cfg
@@ -11,6 +11,8 @@
 		{	"name": 			"Shell",
 			"filePattern":		"*.sh",
 			"projectsPath": 	"I:/Shell2",
-			"tokenPath":		"../AuToCa/resources/shell_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/shell_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	]
 }
