--- a/resources/configuration/haskell.cfg
+++ b/resources/configuration/haskell.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Haskell",
 			"filePattern":		"*.hs",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Haskell/",
-			"tokenPath":		"../AuToCa/resources/haskell_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/haskell_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	],
 
 	"DB": {
