--- a/resources/configuration/python.cfg
+++ b/resources/configuration/python.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Python",
 			"filePattern":		"*.py",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Python/",
-			"tokenPath":		"../AuToCa/resources/python_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/python_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	],
 
 	"DB": {
