--- a/resources/configuration/scheme.cfg
+++ b/resources/configuration/scheme.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Scheme",
 			"filePattern":		"*.scm",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Scheme/",
-			"tokenPath":		"../AuToCa/resources/scheme_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/scheme_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	],
 
 	"DB": {
