--- a/resources/configuration/shell.cfg
+++ b/resources/configuration/shell.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Shell",
 			"filePattern":		"*.sh",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Shell/",
-			"tokenPath":		"../AuToCa/resources/shell_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/shell_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "2"}
 	],
 
 	"DB": {
