--- a/resources/testing/configuration/testCpp.cfg
+++ b/resources/testing/configuration/testCpp.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Cpp",
 			"filePattern":		"*.cpp",
 			"projectsPath": 	"../AuToCa/resources/testing/testprojects/test2/",			
-			"tokenPath":		"../AuToCa/resources/cpp_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/cpp_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "1"}
 	],
 	
 	"DB": {
