--- a/resources/testing/configuration/testHaskell.cfg
+++ b/resources/testing/configuration/testHaskell.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Haskell",
 			"filePattern":		"*.hs",
 			"projectsPath": 	"../AuToCa/resources/testing/testprojects/test2/",			
-			"tokenPath":		"../AuToCa/resources/haskell_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/haskell_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "1"}
 	],
 
 	"DB": {
