--- a/resources/testing/configuration/testScheme.cfg
+++ b/resources/testing/configuration/testScheme.cfg
@@ -3,7 +3,9 @@
 		{	"name": 			"Scheme",
 			"filePattern":		"*.scm",
 			"projectsPath": 	"../AuToCa/resources/testing/testprojects/test2/",
-			"tokenPath":		"../AuToCa/resources/scheme_keywords.txt"}
+			"tokenPath":		"../AuToCa/resources/scheme_keywords.txt",
+			"projectSizeLimit":	"50000000",
+			"minAmountOfProjects": "1"}
 	],
 
 	"DB": {
