--- a/resources/configuration/python.cfg
+++ b/resources/configuration/python.cfg
@@ -28,7 +28,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				 "minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -43,7 +43,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter"},
+				{"name": "IntersectFilter",
 				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -58,7 +58,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter"}, 
+				{"name": "IntersectFilter", 
 				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -73,7 +73,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter"}, 
+				{"name": "IntersectFilter", 
 				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -88,7 +88,7 @@
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter"}, 
+				{"name": "IntersectFilter", 
 				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
