found bug fixed

--- a/resources/configuration/haskell.cfg
+++ b/resources/configuration/haskell.cfg
@@ -153,10 +153,7 @@
 		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
 		"DEFAULT_MULTI_COMMENT":	"(?s)\\{-.*?-\\}",
-		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",
-			
-		"PYTHON_LIKE_COMMENT": 		"(?s)--.*?\n",
-			
+		"DEFAULT_SINGLE_COMMENT":	"(?s)--.*?\n",		
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
