--- a/resources/testing/configuration/testScheme.cfg
+++ b/resources/testing/configuration/testScheme.cfg
@@ -64,18 +64,15 @@
 	],
 	
 	"Tokenizer": {
-		"DEFAULT_LS": 				"\n",
-		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
+		"DEFAULT_LS": 				"\n",	
+		"DEFAULT_WORD": 			"[a-zA-Z]\\w+((-\\w+)*[*]?)*(\/\\w+)*",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
 		"DEFAULT_MULTI_COMMENT":	"(?s)#\\|.*?\\|#",
-		"DEFAULT_SINGLE_COMMENT":	"(?s);;;.*?\n",
-			
-		"PYTHON_LIKE_COMMENT": 		"(?s)#.*?\n",
-			
+		"DEFAULT_SINGLE_COMMENT":	"(?s);;(;)?.*?\n",		
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
-		"TABSPACE":					"    "
+		"TABSPACE":					"  "
 	},
 	
 	"DBTokenHandler": {
