--- a/resources/configuration/c.cfg
+++ b/resources/configuration/c.cfg
@@ -100,13 +100,10 @@
 	
 	"Tokenizer": {
 		"DEFAULT_LS": 				"\n",
-		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
+		"DEFAULT_WORD": 			"[a-zA-Z_]\\w+(_\\w+)*",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
 		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
-		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",
-			
-		"PYTHON_LIKE_COMMENT": 		"(?s)#.*?\n",
-			
+		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
