--- a/resources/testing/configuration/testCpp.cfg
+++ b/resources/testing/configuration/testCpp.cfg
@@ -65,7 +65,7 @@
 	
 	"Tokenizer": {
 		"DEFAULT_LS": 				"\n",
-		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
+		"DEFAULT_WORD": 			"[a-zA-Z]\\w+(_\\w+)*",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
 		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
 		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",
