--- a/resources/testing/configuration/testPython.cfg
+++ b/resources/testing/configuration/testPython.cfg
@@ -67,11 +67,8 @@
 		"DEFAULT_LS": 				"\n",
 		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
-		"DEFAULT_MULTI_COMMENT":	"(?s)\"\"\".*?\"\"\"",
-		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",
-			
-		"PYTHON_LIKE_COMMENT": 		"(?s)#.*?\n",
-			
+		"DEFAULT_MULTI_COMMENT":	"(?s)\'\'\'.*?\'\'\'",
+		"DEFAULT_SINGLE_COMMENT":	"(?s)#.*?\n",
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
