gradle updated for jdk 1.8

--- a/resources/configuration/javaIntersection.cfg
+++ b/resources/configuration/javaIntersection.cfg
@@ -21,22 +21,7 @@
 	},
 	
 	"FilterChains": [					
-		{	"resultName": "Global 10",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IntersectFilter",
-				"minOccInProject": "10"},			 
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "GlobalFilter"}
-			]
-		},			
-		{	"resultName": "Global 30",
+		{	"resultName": "Newline30",
 			"languages": [
 				{"name": 	"Java"}
 			],
@@ -48,10 +33,10 @@
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
-				{"name": "GlobalFilter"}
+				{"name": "NewlineFilter"}
 			]
-		},
-		{	"resultName": "Global 60",
+		},			
+		{	"resultName": "Newline60",
 			"languages": [
 				{"name": 	"Java"}
 			],
@@ -63,7 +48,22 @@
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
-				{"name": "GlobalFilter"}
+				{"name": "NewlineFilter"}
+			]
+		},
+		{	"resultName": "Newlinel20",
+			"languages": [
+				{"name": 	"Java"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "IntersectFilter",
+				"minOccInProject": "120"},			 
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "NewlineFilter"}
 			]
 		},
 	],
