--- a/resources/configuration/cNon.cfg
+++ b/resources/configuration/cNon.cfg
@@ -9,7 +9,7 @@
 	],
 	
 	"DB": {
-		"FILENAME":		".c_autoca",
+		"FILENAME":		".cNon_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
@@ -85,7 +85,7 @@
 	
 	"Tokenizer": {
 		"DEFAULT_LS": 				"\n",
-		"DEFAULT_WORD": 			"[a-zA-Z_]\\w+(_\\w+)*",
+		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
 		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
 		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",			
