--- a/resources/configuration/cpp.cfg
+++ b/resources/configuration/cpp.cfg
@@ -95,7 +95,8 @@
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
-		"TABSPACE":					"    "
+		"TABSPACE":					"    ",	
+		"EMPTYLINE":				"(?m)^[ \t]*\n"	
 	},
 	
 	"DBTokenHandler": {
@@ -122,7 +123,7 @@
 		"RESULTTABLE":	"resulttable",
 		"RANK":		"rank_",
 		"PREFIXSTAT":	"LStat_",
-		"PRECISION":	"precision_"
+"PRECISION":	"precision_", 		"SUMMARY":	"summary_",
 	},
 	
 	"ScanMode": {
