--- a/resources/configuration/python.cfg
+++ b/resources/configuration/python.cfg
@@ -80,21 +80,6 @@
 				{"name": "UpCaseFilter"},
 				{"name": "RealIndentFilter"}
 			]
-		},			
-		{	"resultName": "_Ind_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Python"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IntersectFilter", 
-				"minOccInProject": "2"},			 
-				{"name": "SubStringFilter",
-				 "subString": "#"},
-				{"name": "UpCaseFilter"},
-				{"name": "IndentFilter"}
-			]
 		}					
 	],
 	
@@ -107,7 +92,8 @@
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
-		"TABSPACE":					"    "
+		"TABSPACE":					"    ",	
+		"EMPTYLINE":				"(?m)^[ \t]*\n"	
 	},
 	
 	"DBTokenHandler": {
@@ -134,7 +120,8 @@
 		"RESULTTABLE":	"resulttable",
 		"RANK":		"rank_",
 		"PREFIXSTAT":	"LStat_",
-		"PRECISION":	"precision_"
+		"PRECISION":	"precision_", 
+		"SUMMARY":	"summary_"
 	},
 	
 	"ScanMode": {
