--- a/resources/configuration/pythonNon.cfg
+++ b/resources/configuration/pythonNon.cfg
@@ -1,21 +1,21 @@
 {
 	"DefaultLanguages": [
-		{	"name": 			"C",
-			"filePattern":		"*.c",
-			"projectsPath": 	"../AuToCa/resources/testprojects/C/",
-			"tokenPath":		"../AuToCa/resources/c_keywords.txt",
+		{	"name": 			"Python",
+			"filePattern":		"*.py",
+			"projectsPath": 	"../AuToCa/resources/testprojects/Python/",
+			"tokenPath":		"../AuToCa/resources/python_keywords.txt",
 			"projectSizeLimit":	"600000000",
 			"minAmountOfProjects": "4"}
 	],
-	
+
 	"DB": {
-		"FILENAME":		".c_autoca",
+		"FILENAME":		".pythonNon_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
 		"LOGINPREFIX":	"jdbc:h2:"
 	},
-	
+
 	"DataSet": {
 		"outputLocation":			"resources/databases/"
 	},
@@ -23,13 +23,13 @@
 	"FilterChains": [
 		{	"resultName": "_Newl_Int_Up_Sub",
 			"languages": [
-				{"name": 	"C"}
+				{"name": 	"Python"}
 			],
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
 				{"name": "IntersectFilter",
-				 "minOccInProject": "2"},
+				 "minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
@@ -38,7 +38,7 @@
 		},			
 		{	"resultName": "_Glo_Int_Up_Sub",
 			"languages": [
-				{"name": 	"C"}
+				{"name": 	"Python"}
 			],
 			"filters": [
 				{"name": "Output", 
@@ -53,12 +53,12 @@
 		},			
 		{	"resultName": "_Cov_Int_Up_Sub",
 			"languages": [
-				{"name": 	"C"}
+				{"name": 	"Python"}
 			],
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter",
+				{"name": "IntersectFilter", 
 				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
@@ -68,27 +68,27 @@
 		},		
 		{	"resultName": "_RealInd_Int_Up_Sub",
 			"languages": [
-				{"name": 	"C"}
+				{"name": 	"Python"}
 			],
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IntersectFilter",
-				"minOccInProject": "2"},			 	
+				{"name": "IntersectFilter", 
+				"minOccInProject": "2"},			 
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
 				{"name": "RealIndentFilter"}
 			]
-		}					
+		}				
 	],
 	
 	"Tokenizer": {
 		"DEFAULT_LS": 				"\n",
-		"DEFAULT_WORD": 			"[a-zA-Z_]\\w+(_\\w+)*",
+		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
 		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
-		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",			
+		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",		
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
@@ -118,10 +118,10 @@
 		"PROJECT":		"projects",
 		"LANGUAGE":		"languages", 
 		"RESULTTABLE":	"resulttable",
-		"RANK":		"rank_",
+		"RANK":			"rank_",
 		"PREFIXSTAT":	"LStat_",
-		"PRECISION":	"precision_", 		
-		"SUMMARY":	"summary_",
+		"PRECISION":	"precision_", 
+		"SUMMARY":		"summary_"
 	},
 	
 	"ScanMode": {
