--- a/resources/testing/configuration/testJava.cfg
+++ b/resources/testing/configuration/testJava.cfg
@@ -79,7 +79,8 @@
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
-		"TABSPACE":					"    "
+		"TABSPACE":					"    ",	
+		"EMPTYLINE":				"(?m)^[ \t]*\n"	
 	},
 	
 	"DBTokenHandler": {
@@ -106,7 +107,8 @@
 		"RESULTTABLE":	"resulttable",
 		"RANK":		"rank_",
 		"PREFIXSTAT":	"LStat_",
-		"PRECISION":	"precision_"
+		"PRECISION":	"precision_", 
+		"SUMMARY":	"summary_"
 	},
 	
 	"ScanMode": {
