--- a/resources/configuration/java.cfg
+++ b/resources/configuration/java.cfg
@@ -103,14 +103,12 @@
 		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
 		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
-		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",
-			
-		"PYTHON_LIKE_COMMENT": 		"(?s)#.*?\n",
-			
+		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
-		"TABSPACE":					"    "
+		"TABSPACE":					"    ",	
+		"EMPTYLINE":				"(?m)^[ \t]*\n"	
 	},
 	
 	"DBTokenHandler": {
@@ -137,7 +135,8 @@
 		"RESULTTABLE":	"resulttable",
 		"RANK":			"rank_",
 		"PREFIXSTAT":	"LStat_",
-		"PRECISION":	"precision_"
+		"PRECISION":	"precision_", 
+		"SUMMARY":	"summary_"
 	},
 		
 	"ScanMode": {
