--- a/resources/configuration/thesisFiltered.cfg
+++ b/resources/configuration/thesisFiltered.cfg
@@ -87,7 +87,8 @@
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
-		"TABSPACE":					"    "
+		"TABSPACE":					"    ",	
+		"EMPTYLINE":				"(?m)^[ \t]*\n"	
 	},
 	
 	"DBTokenHandler": {
@@ -114,7 +115,8 @@
 		"RESULTTABLE":	"resulttable",
 		"RANK":			"rank_",
 		"PREFIXSTAT":	"LStat_",
-		"PRECISION":	"precision_"
+		"PRECISION":	"precision_", 
+		"SUMMARY":	"summary_"
 	},
 		
 	"ScanMode": {
