--- a/resources/testing/configuration/testScheme.cfg
+++ b/resources/testing/configuration/testScheme.cfg
@@ -72,7 +72,8 @@
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
-		"TABSPACE":					"  "
+		"TABSPACE":					"    ",	
+		"EMPTYLINE":				"(?m)^[ \t]*\n"	
 	},
 	
 	"DBTokenHandler": {
@@ -99,7 +100,8 @@
 		"RESULTTABLE":	"resulttable",
 		"RANK":			"rank_",
 		"PREFIXSTAT":	"LStat_",
-		"PRECISION":	"precision_"
+		"PRECISION":	"precision_", 
+		"SUMMARY":	"summary_"
 	},
 	
 	"ScanMode": {
