--- a/resources/configuration/cpp.cfg
+++ b/resources/configuration/cpp.cfg
@@ -66,7 +66,7 @@
 				{"name": "CoverageFilter"}
 			]
 		},			
-		{	"resultName": "_Ind_Int_Up_Sub",
+		{	"resultName": "_Real_int",
 			"languages": [
 				{"name": 	"Cpp"}
 			],
@@ -78,7 +78,7 @@
 				{"name": "SubStringFilter",
 				 "subString": "#"},
 				{"name": "UpCaseFilter"},
-				{"name": "IndentFilter"}
+				{"name": "RealIndentFilter"}
 			]
 		}					
 	],
