--- a/resources/configuration/haskellNon.cfg
+++ b/resources/configuration/haskellNon.cfg
@@ -1,15 +1,15 @@
 {
 	"DefaultLanguages": [
-		{	"name": 			"Java",
-			"filePattern":		"*.java",
-			"projectsPath": 	"../AuToCa/resources/testprojects/Thesis/",
-			"tokenPath":		"../AuToCa/resources/java_keywords.txt",
-			"projectSizeLimit":	"1",
-			"minAmountOfProjects": "1"}
+		{	"name": 			"Haskell",
+			"filePattern":		"*.hs",
+			"projectsPath": 	"../AuToCa/resources/testprojects/Haskell/",
+			"tokenPath":		"../AuToCa/resources/haskell_keywords.txt",
+			"projectSizeLimit":	"600000000",
+			"minAmountOfProjects": "4"}
 	],
 
 	"DB": {
-		"FILENAME":		".thesisNon_autoca",
+		"FILENAME":		".haskellNon_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
@@ -20,55 +20,65 @@
 		"outputLocation":			"resources/databases/"
 	},
 	
-	"FilterChains": [		
-		{	"resultName": "_Newl_Int_Up_Sub",
+	"FilterChains": [
+		{	"resultName": "_Global_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"Haskell"}
 			],
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "NewlineFilter"}
-			]
-		},			
-		{	"resultName": "_Glo_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
+				{"name": "IntersectFilter",
+				"minOccInProject": "2"},	
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
 				{"name": "GlobalFilter"}
 			]
-		},			
-		{	"resultName": "_Cov_Int_Up_Sub",
+		},		
+		{	"resultName": "_Coverage_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"Haskell"}
 			],
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
+				{"name": "IntersectFilter",
+				"minOccInProject": "2"},	
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
 				{"name": "CoverageFilter"}
 			]
 		},		
-		{	"resultName": "_RealInd_Int_Up_Sub",
+		{	"resultName": "_Newline_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"Haskell"}
 			],
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "RealIndentFilter"}
+				{"name": "IntersectFilter",
+				"minOccInProject": "2"},	
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "NewlineFilter"}
 			]
 		},			
-		{	"resultName": "_Ind_Int_Up_Sub",
+		{	"resultName": "_RealIndent_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Java"}
+				{"name": 	"Haskell"}
 			],
 			"filters": [
 				{"name": "Output", 
 				 "save": "true"},
-				{"name": "IndentFilter"}
+				{"name": "IntersectFilter",
+				"minOccInProject": "2"},	
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "RealIndentFilter"}
 			]
 		}			
 	],
@@ -78,10 +88,7 @@
 		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
 		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
-		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",
-			
-		"PYTHON_LIKE_COMMENT": 		"(?s)#.*?\n",
-			
+		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
@@ -90,7 +97,7 @@
 	},
 	
 	"DBTokenHandler": {
-		"DEFAULT_MAX_TOKEN_LENGTH":	"100",
+		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
 		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
 		
 		"DBNEWLINE":"#newline",
@@ -101,7 +108,7 @@
 		"DELIMITER":"#delimiter",
 		"LONGWORD":	"#longword"
 	},
-		
+	
 	"Tables": {
 		"TEMPORARY": 	"temporary",
 		"TEMPFILTER":	"temporary_filter",
@@ -116,7 +123,7 @@
 		"PRECISION":	"precision_", 
 		"SUMMARY":	"summary_"
 	},
-		
+	
 	"ScanMode": {
 		"DEFAULT_PROGRESS_STEPS":	"15"
 	}
