--- a/resources/configuration/apache.cfg
+++ b/resources/configuration/apache.cfg
@@ -4,12 +4,12 @@
 			"filePattern":		"*.java",
 			"projectsPath": 	"../AuToCa/resources/testprojects/Thesis/",
 			"tokenPath":		"../AuToCa/resources/java_keywords.txt",
-			"projectSizeLimit":	"1",
-			"minAmountOfProjects": "1"}
+			"projectSizeLimit":	"600000000",
+			"minAmountOfProjects": "4"}
 	],
 
 	"DB": {
-		"FILENAME":		".thesisNon_autoca",
+		"FILENAME":		".apache_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
@@ -60,17 +60,7 @@
 				 "save": "true"},
 				{"name": "RealIndentFilter"}
 			]
-		},			
-		{	"resultName": "_Ind_Int_Up_Sub",
-			"languages": [
-				{"name": 	"Java"}
-			],
-			"filters": [
-				{"name": "Output", 
-				 "save": "true"},
-				{"name": "IndentFilter"}
-			]
-		}			
+		}		
 	],
 	
 	"Tokenizer": {
@@ -78,10 +68,7 @@
 		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
 		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
-		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",
-			
-		"PYTHON_LIKE_COMMENT": 		"(?s)#.*?\n",
-			
+		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
@@ -114,7 +101,7 @@
 		"RANK":			"rank_",
 		"PREFIXSTAT":	"LStat_",
 		"PRECISION":	"precision_", 
-		"SUMMARY":	"summary_"
+		"SUMMARY":		"summary_"
 	},
 		
 	"ScanMode": {
