--- a/resources/configuration/shellNon.cfg
+++ b/resources/configuration/shellNon.cfg
@@ -1,15 +1,15 @@
 {
 	"DefaultLanguages": [
-		{	"name": 			"Scheme",
-			"filePattern":		"*.scm",
-			"projectsPath": 	"../AuToCa/resources/testprojects/Scheme/",
-			"tokenPath":		"../AuToCa/resources/scheme_keywords.txt",
+		{	"name": 			"Shell",
+			"filePattern":		"*.sh",
+			"projectsPath": 	"../AuToCa/resources/testprojects/Shell/",
+			"tokenPath":		"../AuToCa/resources/shell_keywords.txt",
 			"projectSizeLimit":	"600000000",
 			"minAmountOfProjects": "4"}
 	],
 
 	"DB": {
-		"FILENAME":		".scheme_autoca",
+		"FILENAME":		".shellNon_autoca",
 		"DRIVER":		"org.h2.Driver",
 		"USER":			"sa",
 		"PASSWORD":		"",
@@ -23,7 +23,7 @@
 	"FilterChains": [
 		{	"resultName": "_Global_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Scheme"}
+				{"name": 	"Shell"}
 			],
 			"filters": [
 				{"name": "Output", 
@@ -36,9 +36,19 @@
 				{"name": "GlobalFilter"}
 			]
 		},	
+		{	"resultName": "_Global",
+			"languages": [
+				{"name": 	"Shell"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "GlobalFilter"}
+			]
+		},		
 		{	"resultName": "_Coverage_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Scheme"}
+				{"name": 	"Shell"}
 			],
 			"filters": [
 				{"name": "Output", 
@@ -50,10 +60,20 @@
 				{"name": "UpCaseFilter"},
 				{"name": "CoverageFilter"}
 			]
-		},
+		},	
+		{	"resultName": "_Coverage",
+			"languages": [
+				{"name": 	"Shell"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "CoverageFilter"}
+			]
+		},		
 		{	"resultName": "_Newline_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Scheme"}
+				{"name": 	"Shell"}
 			],
 			"filters": [
 				{"name": "Output", 
@@ -65,10 +85,45 @@
 				{"name": "UpCaseFilter"},
 				{"name": "NewlineFilter"}
 			]
-		},
+		},	
+		{	"resultName": "_Newline",
+			"languages": [
+				{"name": 	"Shell"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "NewlineFilter"}
+			]
+		},		
+		{	"resultName": "_Indent_Int_Up_Sub",
+			"languages": [
+				{"name": 	"Shell"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "IntersectFilter",
+				"minOccInProject": "2"},	
+				{"name": "SubStringFilter",
+				 "subString": "#"},
+				{"name": "UpCaseFilter"},
+				{"name": "IndentFilter"}
+			]
+		},	
+		{	"resultName": "_Indent",
+			"languages": [
+				{"name": 	"Shell"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "IndentFilter"}
+			]
+		},		
 		{	"resultName": "_RealIndent_Int_Up_Sub",
 			"languages": [
-				{"name": 	"Scheme"}
+				{"name": 	"Shell"}
 			],
 			"filters": [
 				{"name": "Output", 
@@ -80,15 +135,25 @@
 				{"name": "UpCaseFilter"},
 				{"name": "RealIndentFilter"}
 			]
+		},	
+		{	"resultName": "_RealIndent",
+			"languages": [
+				{"name": 	"Shell"}
+			],
+			"filters": [
+				{"name": "Output", 
+				 "save": "true"},
+				{"name": "RealIndentFilter"}
+			]
 		}			
 	],
 	
 	"Tokenizer": {
-		"DEFAULT_LS": 				"\n",	
-		"DEFAULT_WORD": 			"[a-zA-Z]\\w+((-\\w+)*[*]?)*(\/\\w+)*",
+		"DEFAULT_LS": 				"\n",
+		"DEFAULT_WORD": 			"[a-zA-Z]\\w+",
 		"DEFAULT_STRING": 			"(?s)\".*?\"",
-		"DEFAULT_MULTI_COMMENT":	"(?s)#\\|.*?\\|#",
-		"DEFAULT_SINGLE_COMMENT":	"(?s);;(;)?.*?\n",		
+		"DEFAULT_MULTI_COMMENT":	"(?s)/\\*.*?\\*/",
+		"DEFAULT_SINGLE_COMMENT":	"(?s)//.*?\n",			
 		"WHITESPACE":				"[ \t]+",
 		"START_OF_LINE": 			"(?m)^[ \t]*",
 		"NEWLINE": 					"\n",
@@ -97,7 +162,7 @@
 	},
 	
 	"DBTokenHandler": {
-		"DEFAULT_MAX_TOKEN_LENGTH":	"30",
+		"DEFAULT_MAX_TOKEN_LENGTH":	"17",
 		"DEFAULT_MIN_TOKEN_LENGTH":	"1",
 		
 		"DBNEWLINE":"#newline",
